# numinal

./: .gitignore  LICENSE  README.md  numinal-datacard-spec-v1-rc1.md  pyproject.toml
.github/workflows/: ci.yml
examples/: uk-health-ai-corpus.md  uk-health-ai-corpus.yaml
src/numinal/: __init__.py  cli.py
src/numinal/commands/: __init__.py  compliance.py  init.py  render.py  smart_rules.py  validate.py
src/numinal/detection/: __init__.py  auto.py  croissant.py
src/numinal/schema/: __init__.py  tiers.py  vocabularies.py
tests/: test_cli.py  test_smart_rules.py
