[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "numinal"
version = "0.1.0"
description = "Governance-as-code data cards for multi-party AI dataset sharing"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [{ name = "numinal" }]
keywords = ["ai", "governance", "dataset", "croissant", "eu-ai-act", "data-card"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "click>=8.1",
    "pyyaml>=6.0",
    "rich>=13.0",
]

[project.optional-dependencies]
tabular = ["pandas>=2.0"]
dev = ["pytest>=7.0", "pytest-cov"]

[project.scripts]
numinal = "numinal.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/numinal"]
